--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
     <h1>La carta</h1>
 
     <h2>Menú diario</h2>
+    <!-- lista tipo circle -->
 <ul class="circulo">
     <li>
         Primer plato
+        <!-- Lista tipo 1 -->
         <ol>
             <li>Arroz al horno </li>
             <li>Paella</li>
             <li>Fideua
                 <ol class="romana">
+                    <!-- Lista tipo I -->
                     <li>De Gandia</li>
                     <li>De boletus</li>
                 </ol>
@@ -28,6 +31,7 @@
 
     <li>Segundo plato
         <ol class="letras">
+            <!-- Lista tipo a -->
             <li>Lomo a la valenciana</li>
             <li>Lenguado</li>
             <li>Entrecot en su salsa</li>
