--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <h1>La carta</h1>
 
-    <h2>Menú diario</h2>
+    <h3>menú diario</h2>
     <!-- lista tipo circle -->
 <ul class="circulo">
     <li>
